--- a/Docs/Help/styles/style.css
+++ b/Docs/Help/styles/style.css
@@ -2,26 +2,50 @@ html,body {
     /* Общие стили для html и body */
     background-color: #2c2c2c; /* тёмно-серый */
     color: #dfdfdf; /* чтоб текст был виден */
-    font-family: 'JetBrains Mono';
+    font-family: 'JetBrains Mono'; /* моноширинный шрифт */
+    margin: 0;/* убираем отступы по умолчанию */
+    padding: 0;/* убираем отступы по умолчанию */
 }
 
 fieldset {
-    border: 2px solid #4a90e2; /* синий цвет границы */
+    border: 2px solid #3295DB; /* синий цвет границы */
     background-color: #3a3a3a; /* чуть светлее фон */
     border-radius: 8px; /* скругленные углы */
-    margin: 20px;
-    padding: 15px;
+    margin: 10px;
+    padding: 10px;
 }
 
 fieldset legend {
-    color: #4a90e2; /* синий цвет текста */
+    color: #3295DB; /* синий цвет текста */
     font-weight: bolder;/* жирный шрифт */
     font-size: 1.2em;/* немного больше обычного */
     font-style: italic;/* курсив */
-    border: #4a90e2 2px solid;/* синий цвет рамки */
+    border: #3295DB 2px solid;/* синий цвет рамки */
     padding: 5px 10px;/* Отступы внутри легенды */
     border-radius: 5px;/* скругленные углы */
     background-color: #2c2c2c; /* совпадает с фоном страницы */
+    text-shadow: 2px 2px 4px #000000;/* Тень для текста */
+}
+
+
+fieldset.item {
+    border: 2px solid #dbb432; /* синий цвет границы */
+    background-color: #3a3a3a; /* чуть светлее фон */
+    border-radius: 8px; /* скругленные углы */
+    margin: 10px;
+    padding: 10px;
+}
+
+fieldset.item legend {
+    color: #dbb432;
+    font-weight: bolder;/* жирный шрифт */
+    font-size: 1.2em;/* немного больше обычного */
+    font-style: italic;/* курсив */
+    border: #dbb432 2px solid;
+    padding: 5px 10px;/* Отступы внутри легенды */
+    border-radius: 5px;/* скругленные углы */
+    background-color: #2c2c2c; /* совпадает с фоном страницы */
+    text-shadow: 2px 2px 4px #000000;/* Тень для текста */
 }
 
 nav ul {
@@ -30,10 +54,18 @@ nav ul {
 }
 
 a {
-    color: #4a90e2; /* синий цвет ссылок */
+    color: #3295DB; /* синий цвет ссылок */
     text-decoration-line: underline; /* Подчеркивание текста */
     text-decoration-style: solid;/* Стиль линии подчеркивания */
     text-underline-offset: 3px;/* Расстояние между текстом и линией */
     text-decoration-thickness: 1px;/* Толщина линии */
+    text-shadow: 2px 2px 4px #000000; /* Тень для текста */
+}
 
+p.basic {
+    color: #dfdfdf;
+    font-size: 1em; /* стандартный размер шрифта */
+    line-height: 1.5em; /* межстрочный интервал */
+    text-align: justify; /* выравнивание по ширине */
+    text-indent: 25px; /* отступ первой строки */
 }
